new actions section + new front banner

--- a/sass/_app.scss
+++ b/sass/_app.scss
@@ -1,15 +1,21 @@
 .app{
   position: absolute;
   z-index: 5;
-  top: 470px;
+  top: 460px;
   left: 0px;
   font-family: $cond;
   font-size: 14px;
   text-transform: uppercase;
+  .front &{
+    top: 479px;
+  }
   &__fixed{
     position: fixed;
     top: 0px;
     left: 0px;
+    .front &{
+      top: 0px;
+    }
   }
   &_item{
     display: block;
