--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,4 +1,22 @@
 @font-face {
+    font-family: "SegoeUIRegular";
+    src: url("fonts/SegoeUIRegular.eot");
+    src: url("fonts/SegoeUIRegular.eot?#iefix")format("embedded-opentype"),
+    url("fonts/SegoeUIRegular.woff") format("woff"),
+    url("fonts/SegoeUIRegular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
+@font-face {
+    font-family: "SegoeUIBold";
+    src: url("fonts/SegoeUIBold.eot");
+    src: url("fonts/SegoeUIBold.eot?#iefix")format("embedded-opentype"),
+    url("fonts/SegoeUIBold.woff") format("woff"),
+    url("fonts/SegoeUIBold.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
+@font-face {
     font-family: 'proximanova';
     src: url('fonts/proximanova-reg.eot');
     src: url('fonts/proximanova-reg.eot?#iefix') format('embedded-opentype'),
