--- a/css/all.css
+++ b/css/all.css
@@ -83,6 +83,20 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 @font-face {
+  font-family: "SegoeUIRegular";
+  src: url("fonts/SegoeUIRegular.eot");
+  src: url("fonts/SegoeUIRegular.eot?#iefix") format("embedded-opentype"), url("fonts/SegoeUIRegular.woff") format("woff"), url("fonts/SegoeUIRegular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+@font-face {
+  font-family: "SegoeUIBold";
+  src: url("fonts/SegoeUIBold.eot");
+  src: url("fonts/SegoeUIBold.eot?#iefix") format("embedded-opentype"), url("fonts/SegoeUIBold.woff") format("woff"), url("fonts/SegoeUIBold.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+@font-face {
   font-family: 'proximanova';
   src: url("fonts/proximanova-reg.eot");
   src: url("fonts/proximanova-reg.eot?#iefix") format("embedded-opentype"), url("fonts/proximanova-reg.woff2") format("woff2"), url("fonts/proximanova-reg.woff") format("woff"), url("fonts/proximanova-reg.ttf") format("truetype"), url("fonts/proximanova-reg.svg#proximanova") format("svg");
@@ -355,7 +369,7 @@ textarea:focus {
   }
 }
 
-.fadeIn, .fadeInUp, .fadeOut, .fadeOutUp, .flipInX, .flipOutX, .flipInY, .flipOutY, .zoomIn, .zoomOut, .slideInLeft, .rollIn, .rollOut, .bounce, .pulse, .tada, .bounceInDown {
+.fadeIn, .fadeInUp, .fadeOut, .fadeOutUp, .flipInX, .flipOutX, .flipInY, .flipOutY, .zoomIn, .zoomOut, .slideInLeft, .rollIn, .rollOut, .bounce, .pulse, .tada, .bounceInDown, .fadeInRight {
   visibility: visible;
 }
 
@@ -403,15 +417,29 @@ textarea:focus {
     @include def-opacity(1);
   }*/
 }
+@media all and (max-width: 1000px) {
+  .title {
+    padding: 15px 0 8px;
+    height: auto;
+    min-height: 0;
+  }
+}
 .title_wrap {
   position: relative;
+  height: 100%;
 }
 .title__main {
-  height: 319px;
-  border-bottom: 1px solid #ededee;
-  padding: 43px 0px 43px 0px;
-  background: url("../image/title-main-1920.jpg") 50% no-repeat;
-  background-size: cover;
+  height: 442px;
+  padding: 0;
+  background: url("../image/title-main2-2400.png") 50% bottom no-repeat;
+  background-size: auto 442px;
+}
+@media all and (max-width: 1000px) {
+  .title__main {
+    background-position: right bottom;
+    height: 90px;
+    padding: 20px 0 0;
+  }
 }
 .title__info {
   background: url("../image/title-info-1920.jpg") 50% no-repeat;
@@ -442,15 +470,10 @@ textarea:focus {
   background-size: cover;
 }
 .title__actions {
-  background: url("../image/title-actions-1920.jpg") 50% no-repeat;
-  background-size: cover;
-}
-@media all and (max-width: 1000px) {
-  .title {
-    padding: 15px 0 8px;
-    height: auto;
-    min-height: 0;
-  }
+  height: auto;
+  background: none;
+  min-height: 0;
+  padding: 0;
 }
 .title_h1 {
   font-family: proximanova_bold;
@@ -468,22 +491,14 @@ textarea:focus {
   }*/
 }
 .title_h1__main {
-  width: 640px;
+  font-family: SegoeUIRegular;
+  text-transform: none;
+  font-size: 25px;
+  line-height: 1;
+  color: #fff1f1;
   border: none;
-  padding: 0px 0px 0px 9px;
-  margin: 0px 0px 77px 0px;
-  line-height: 1.2;
-  font-size: 35px;
-}
-@media all and (max-width: 1000px) {
-  .title_h1__main {
-    width: 100%;
-    max-width: 640px;
-    margin: 0 auto 5px auto;
-    text-align: center;
-    height: auto;
-    font-size: 22px;
-  }
+  padding: 18px 0 0 2px;
+  margin: 0;
 }
 @media all and (max-width: 1000px) {
   .title_h1 {
@@ -496,9 +511,34 @@ textarea:focus {
     font-size: 22px;
   }
 }
+.title__actions .title_h1 {
+  color: #000;
+  border-left: 5px solid #000;
+  margin: 0;
+}
+.title_exdescr {
+  padding: 24px 0 0 100px;
+}
+@media all and (max-width: 1000px) {
+  .title_exdescr {
+    display: none;
+  }
+}
+.title_exdescr p {
+  font-family: SegoeUIBold;
+  color: #ffffff;
+  font-size: 36px;
+  line-height: 1;
+  text-transform: uppercase;
+}
 .title_descr {
   width: 480px;
   padding: 0px 0px 0px 38px;
+}
+@media all and (max-width: 1000px) {
+  .title_descr {
+    display: none;
+  }
 }
 .title_descr p {
   color: #ffffff;
@@ -530,20 +570,17 @@ textarea:focus {
   color: #fff;
 }
 .title_descr__main {
-  width: 630px;
-  padding: 0px 0px 0px 26px;
-  border-left: 3px solid #ffffff;
+  width: auto;
+  padding: 13px 0 0 129px;
+  border: none;
 }
 .title_descr__main p {
-  font-size: 24px;
-  line-height: 0.6;
-  margin: 0px 0px 15px 0px;
-}
-@media all and (max-width: 1000px) {
-  .title_descr__main p {
-    line-height: 1;
-    margin: 0;
-  }
+  font-size: SegoeUIRegular;
+  color: #fff1f1;
+  font-size: 18px;
+  line-height: 1;
+  margin: 0;
+  padding: 0;
 }
 @media all and (max-width: 1000px) {
   .title_descr {
@@ -558,6 +595,24 @@ textarea:focus {
     font-size: 16px;
     line-height: 1;
     margin: 0;
+  }
+}
+.title__actions .title_descr {
+  display: none;
+}
+.title_girl {
+  position: absolute;
+  z-index: 2;
+  bottom: 10px;
+  right: -42px;
+  background: transparent url("../image/title-girl.png") left top no-repeat;
+  background-size: contain;
+  width: 144px;
+  height: 360px;
+}
+@media all and (max-width: 1000px) {
+  .title_girl {
+    display: none;
   }
 }
 
@@ -1458,20 +1513,32 @@ textarea:focus {
 }
 
 .form-discount {
-  width: 300px;
-  height: 405px;
   position: absolute;
-  top: -43px;
-  right: 0px;
+  top: 0px;
+  right: 53px;
   z-index: 2;
+  overflow: hidden;
+  padding: 0 0 0 50px;
+}
+.form-discount, .form-discount * {
+  box-sizing: border-box;
 }
 .form-discount .messages {
   display: none;
 }
+.form-discount_shadow {
+  -webkit-box-shadow: -10px 0px 15px 0px #002942;
+  -moz-box-shadow: -10px 0px 15px 0px #002942;
+  box-shadow: -10px 0px 15px 0px #002942;
+  background: transparent url("../image/form-discount-bac.jpg") 50% top no-repeat;
+  background-size: cover;
+  width: 300px;
+  height: 400px;
+}
 .form-discount_wrap {
   position: relative;
   z-index: 2;
-  padding: 22px 23px 0px 35px;
+  padding: 0px 23px 0px 46px;
 }
 .form-discount_transp {
   height: 100%;
@@ -1486,32 +1553,38 @@ textarea:focus {
   left: 0px;
   z-index: 1;
 }
-.form-discount_title {
+.form-discount_head {
+  font-family: SegoeUIBold;
+  color: #fff1f1;
+  font-size: 26px;
+  text-transform: uppercase;
   text-align: center;
-  color: #373737;
-  font-size: 24px;
+  height: 67px;
+  padding: 10px 0 0;
+}
+.form-discount_title {
+  font-family: SegoeUIRegular;
+  color: #fff1f1;
+  text-align: center;
+  position: relative;
+  left: -8px;
+  padding: 0 0 16px;
 }
 .form-discount_title p {
-  text-align: center;
-  color: #373737;
-  font-size: 24px;
-}
-.form-discount_title span {
-  display: block;
-  text-align: center;
-  font-size: 56px;
-  padding: 4px 0px 10px 0px;
+  color: #fff1f1;
 }
 .form-discount_confirmation {
-  padding: 0px 22px 0px 22px;
+  padding: 0;
   text-align: center;
 }
 .form-discount_inner {
-  padding: 0px 0px 18px 0px;
+  padding: 0px 0px 21px;
+  width: 231px;
+  margin: 0 auto;
 }
 .form-discount_inner input {
+  width: 100%;
   font-size: 16px;
-  width: 198px;
   height: 46px;
   border: none;
   margin: 0px;
@@ -1526,28 +1599,42 @@ textarea:focus {
   padding: 9px 0px 0px 0px;
   position: relative;
   z-index: 5;
+  width: 231px;
+  margin: 0 auto;
 }
 .form-discount_button input {
-  width: 231px;
-  height: 56px;
+  width: 100%;
+  height: 47px;
   border: none;
-  background-color: #e74c3c;
-  font-family: proximanova_bold;
+  font-family: SegoeUIBold;
   color: #ffffff;
   font-size: 20px;
   text-transform: uppercase;
-  padding: 1px 0px 0px 0px;
+  padding: 0 0 2px;
+  background: #e74d3c;
+  background: -moz-linear-gradient(top, #e74d3c 0%, #d8321f 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, #e74d3c), color-stop(100%, #d8321f));
+  background: -webkit-linear-gradient(top, #e74d3c 0%, #d8321f 100%);
+  background: -o-linear-gradient(top, #e74d3c 0%, #d8321f 100%);
+  background: -ms-linear-gradient(top, #e74d3c 0%, #d8321f 100%);
+  background: linear-gradient(to bottom, #e74d3c 0%, #d8321f 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e74d3c', endColorstr='#d8321f', GradientType=0 );
+  -webkit-transition: box-shadow 0.2s ease-in-out;
+  -moz-transition: box-shadow 0.2s ease-in-out;
+  -o-transition: box-shadow 0.2s ease-in-out;
+  -ms-transition: box-shadow 0.2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out;
 }
 .form-discount_button input:hover {
   cursor: pointer;
-  -webkit-box-shadow: 5px 5px 5px 0px #e74d3c;
-  -moz-box-shadow: 5px 5px 5px 0px #e74d3c;
-  box-shadow: 5px 5px 5px 0px #e74d3c;
+  -webkit-box-shadow: 5px 5px 5px 0px rgba(231, 77, 60, 0.5);
+  -moz-box-shadow: 5px 5px 5px 0px rgba(231, 77, 60, 0.5);
+  box-shadow: 5px 5px 5px 0px rgba(231, 77, 60, 0.5);
 }
 .form-discount_button .ajax-progress {
   position: absolute;
-  top: 29px;
-  right: 25px;
+  top: 25px;
+  right: -20px;
 }
 .form-discount_button .ajax-progress .throbber {
   background: transparent url("../image/loader-ajax-blue.gif") no-repeat 0px 0px;
@@ -1560,28 +1647,59 @@ textarea:focus {
   margin: 0px;
 }
 .form-discount_descr {
-  font-family: proximanova_light;
-  color: #666666;
-  font-size: 14px;
-  padding: 15px 0px 0px 0px;
-  line-height: 1.2;
+  color: #ffffff;
+  font-size: 11px;
+  padding: 17px 0px 0px 0px;
+  line-height: 14px;
+  font-family: SegoeUIRegular;
+  text-align: center;
 }
 .form-discount_descr p {
-  font-family: proximanova_light;
-  color: #666666;
-  font-size: 14px;
-  line-height: 1.2;
+  color: #ffffff;
+  font-size: 11px;
+  line-height: 14px;
+  font-family: SegoeUIRegular;
 }
 .form-discount_confirmation p {
   padding: 80px 0px 0px 0px;
-  color: #666666;
-  font-size: 16px;
   line-height: 1.2;
+  color: #fff1f1;
+  font-size: 18px;
 }
 @media all and (max-width: 1000px) {
   .form-discount {
     display: none;
   }
+}
+.form-discount ::-webkit-input-placeholder {
+  font-family: SegoeUIRegular;
+  color: #717171;
+  font-size: 12px;
+}
+.form-discount :-moz-placeholder {
+  font-family: SegoeUIRegular;
+  color: #717171;
+  font-size: 12px;
+}
+.form-discount ::-moz-placeholder {
+  font-family: SegoeUIRegular;
+  color: #717171;
+  font-size: 12px;
+}
+.form-discount :-ms-input-placeholder {
+  font-family: SegoeUIRegular;
+  color: #717171;
+  font-size: 12px;
+}
+.form-discount ::-ms-input-placeholder {
+  font-family: SegoeUIRegular;
+  color: #717171;
+  font-size: 12px;
+}
+.form-discount :placeholder-shown {
+  font-family: SegoeUIRegular;
+  color: #717171;
+  font-size: 12px;
 }
 
 .main-descr {
@@ -2016,7 +2134,8 @@ textarea:focus {
   text-indent: 100%;
   overflow: hidden;
   white-space: nowrap;
-  margin: 13px auto 51px;
+  margin: -29px auto 51px;
+  position: relative;
 }
 @media all and (max-width: 1000px) {
   .arrow-bb {
@@ -2027,16 +2146,22 @@ textarea:focus {
 .app {
   position: absolute;
   z-index: 5;
-  top: 470px;
+  top: 460px;
   left: 0px;
   font-family: proximanova_cond;
   font-size: 14px;
   text-transform: uppercase;
 }
+.front .app {
+  top: 479px;
+}
 .app__fixed {
   position: fixed;
   top: 0px;
   left: 0px;
+}
+.front .app__fixed {
+  top: 0px;
 }
 .app_item {
   display: block;
@@ -5361,6 +5486,373 @@ textarea:focus {
   transition: all 0.3s;
   backface-visibility: hidden;
   border-radius: 2px;
+}
+
+.actions {
+  margin-top: -2px;
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  display: block;
+}
+.actions:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+.actions_item {
+  float: left;
+  width: 300px;
+  margin: 0 15px;
+}
+.actions_item:nth-child(3n-2) {
+  margin: 0 15px 30px 0;
+}
+.actions_item:nth-child(3n) {
+  margin: 0 0 30px 15px;
+}
+.actions_wrap {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #3498db;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+}
+.actions_image {
+  display: block;
+  padding: 2px 0px 0px 0px;
+  position: relative;
+  -webkit-box-shadow: inset 0px -5px 0px 0px #3498db;
+  -moz-box-shadow: inset 0px -5px 0px 0px #3498db;
+  box-shadow: inset 0px -5px 0px 0px #3498db;
+  margin: 0 0 15px;
+}
+.actions_image img {
+  display: block;
+  position: relative;
+  z-index: -1;
+  width: 100%;
+  height: auto;
+}
+.actions_image:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 2px;
+  left: 0px;
+  width: 100%;
+  height: 198px;
+  background-color: #3498db;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+}
+.actions_image:hover:before {
+  -webkit-opacity: 0.5;
+  -moz-opacity: 0.5;
+  opacity: 0.5;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+}
+@media all and (max-width: 1000px) {
+  .actions_image {
+    float: none;
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto 15px auto;
+    height: auto;
+  }
+}
+@media all and (max-width: 1000px) {
+  .actions_text {
+    padding: 0;
+  }
+}
+.actions_title {
+  display: block;
+  text-align: center;
+  font-family: proximanova_bold;
+  font-size: 18px;
+  line-height: 1;
+  height: 20px;
+  color: #373737;
+  text-transform: uppercase;
+  text-decoration: none;
+  position: relative;
+  margin: 0px 0px 10px 0px;
+  padding: 0px 0px 17px 0px;
+}
+.actions_title:visited {
+  color: #373737;
+}
+.actions_title:hover {
+  color: #3498db;
+}
+.actions_title:active {
+  color: #373737;
+}
+.actions_title:focus {
+  color: #373737;
+}
+.actions_title:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 1px;
+  bottom: 0px;
+  width: 40px;
+  height: 3px;
+  background-color: #3498db;
+}
+.actions_descr {
+  font-family: proximanova_light;
+  color: #373737;
+  font-size: 16px;
+  line-height: 1.3;
+  min-height: 141px;
+}
+@media all and (max-width: 1000px) {
+  .actions_descr {
+    height: auto;
+    margin-bottom: 10px;
+  }
+}
+.actions_link {
+  float: right;
+  color: #373737;
+  font-family: proximanova_italic;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 0px 21px 0px 0px;
+  position: relative;
+}
+.actions_link:visited {
+  color: #373737;
+}
+.actions_link:hover {
+  color: #373737;
+}
+.actions_link:active {
+  color: #373737;
+}
+.actions_link:focus {
+  color: #373737;
+}
+.actions_link:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  right: 0px;
+  top: 1px;
+  width: 13px;
+  height: 14px;
+  background: url("../image/arrow-link.png") no-repeat;
+}
+.actions_link:hover {
+  text-decoration: underline;
+}
+@media all and (max-width: 1000px) {
+  .actions_link {
+    float: none;
+    display: inline-block;
+  }
+}
+
+.action-page {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  display: block;
+}
+.action-page:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+.action-page_left {
+  float: left;
+  width: 643px;
+  padding-right: 15px;
+}
+@media all and (max-width: 1000px) {
+  .action-page_left {
+    float: none;
+    width: 100%;
+    padding: 0;
+  }
+}
+.action-page_right {
+  background: url("../image/action-1920.jpg") 0% 0% no-repeat;
+  background-size: cover;
+  float: left;
+  width: 300px;
+  margin: -70px 2px 0 0;
+}
+@media all and (max-width: 1000px) {
+  .action-page_right {
+    float: none;
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+}
+
+.form-action-new {
+  padding: 15px 0;
+}
+.form-action-new_title {
+  text-transform: uppercase;
+  padding: 15px;
+  color: #ffffff;
+  font-size: 26px;
+  position: relative;
+}
+.form-action-new_title:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 15px;
+  top: 0px;
+  width: 44px;
+  height: 2px;
+  background-color: #ffffff;
+}
+@media all and (max-width: 1000px) {
+  .form-action-new_title {
+    font-size: 20px;
+  }
+}
+.form-action-new .messages {
+  display: none;
+}
+.form-action-new_wrap {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  display: block;
+}
+.form-action-new_wrap:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+.form-action-new_clear {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  display: block;
+}
+.form-action-new_clear:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+.form-action-new_confirmation {
+  padding: 16px 0 0;
+}
+.form-action-new_confirmation p {
+  text-align: center;
+  color: #ffffff !important;
+  font-size: 17px !important;
+}
+.form-action-new_inner {
+  padding: 0px 0px 12px 0px;
+  margin: 0 auto;
+  width: 230px;
+}
+@media all and (max-width: 1000px) {
+  .form-action-new_inner {
+    width: 230px;
+  }
+}
+.form-action-new_inner input {
+  font-size: 16px;
+  width: 198px;
+  height: 46px;
+  border: none;
+  margin: 0px;
+  padding: 0px 16px 0px 16px;
+}
+.form-action-new_inner .error {
+  -webkit-box-shadow: inset 0px 0px 0px 1px red;
+  -moz-box-shadow: inset 0px 0px 0px 1px red;
+  box-shadow: inset 0px 0px 0px 1px red;
+}
+.form-action-new_button {
+  padding: 0px 0px 0px 0px;
+  width: 230px;
+  margin: 0 auto;
+  position: relative;
+}
+.form-action-new_button input {
+  width: 100%;
+  height: 54px;
+  border: none;
+  background-color: #e74c3c;
+  font-family: proximanova_bold;
+  color: #ffffff;
+  font-size: 20px;
+  text-transform: uppercase;
+  padding: 1px 0px 0px 0px;
+}
+.form-action-new_button input:hover {
+  cursor: pointer;
+  border: 2px solid #3498db;
+  background-color: #3498db;
+}
+@media all and (max-width: 1000px) {
+  .form-action-new_button input {
+    display: block;
+    margin: 0 auto;
+  }
+}
+.form-action-new_button .ajax-progress {
+  position: absolute;
+  bottom: 20px;
+  right: -23px;
+}
+.form-action-new_button .ajax-progress .throbber {
+  background: transparent url("../image/loader-ajax-blue2.gif") no-repeat 0px 0px;
+  /* tweak this according to your gif */
+  float: left;
+  height: 16px;
+  /* tweak this according to your gif */
+  width: 16px;
+  /* tweak this according to your gif */
+  margin: 0px;
+}
+.form-action-new_descr {
+  font-family: proximanova_light;
+  color: #ffffff;
+  font-size: 14px;
+  padding: 10px 15px 0px 15px;
+  text-align: center;
+  line-height: 1.2;
+}
+.form-action-new_descr p {
+  font-family: proximanova_light;
+  color: #ffffff;
+  font-size: 14px;
+  text-align: center;
+  line-height: 1.2;
+  margin: 0;
 }
 
 /*# sourceMappingURL=all.css.map */
