--- a/sass/_action-page.scss
+++ b/sass/_action-page.scss
@@ -1,9 +1,28 @@
 .action-page{
+	&, & *{
+		box-sizing: border-box;
+	}
+	padding-bottom: 28px;
 	@include clearfix;
 	&_left{
 		float: left;
-		width: 643px;
-		padding-right: 15px;
+		width: 630px;
+		height: 345px;
+		margin-right: 30px;
+		position: relative;
+		&:before{
+			content: '';
+			position: absolute;
+			right: -23px;
+			top: 50%;
+			margin-top: -16px;
+			display: block;
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 22.5px 0 22.5px 23px;
+			border-color: transparent transparent transparent #17a0da;
+		}
 		@include m1000{
 			float: none;
 			width: 100%;
@@ -11,16 +30,81 @@
 		}
 	}
   &_right{
-  	background: url('../image/action-1920.jpg') 0% 0% no-repeat;
-  	background-size: cover;
+  	background: url('../image/action-page-right-bac.jpg') 0% 0% no-repeat;
+  	background-size: 100%;
   	float: left;
   	width: 300px;
-  	margin: -70px 2px 0 0;
+  	height: 345px;
+  	margin: 0;
   	@include m1000{
 			float: none;
 			width: 100%;
 			max-width: 300px;
 			margin: 0 auto;
 		}
+  }
+  &_top{
+  	background-color: #19254b;
+  	min-height: 61px;
+  	padding: 23px 10px 0 31px;
+  	h1{
+  		font-family: Tahoma;
+  		margin: 0;
+  		//height: 16px;
+  		font-size: 16px;
+  		line-height: 16px;
+  		color: #fff;
+  		position: relative;
+  		padding-left: 43px;
+  		&:before{
+  			content: '';
+  			width: 8px;
+  			height: 16px;
+  			background-color: #e74c3c;
+  			display: block;
+  			position: absolute;
+  			left: 0;
+  			top: 0;
+  		}
+  	}
+  }
+  &_blue{
+  	color: #2eb1f9;
+  	font-weight: bold;
+  }
+  &_middle{
+  	padding: 28px 31px 0;
+  	height: 250px;
+  	background: transparent url('../image/action-page-middle-bac.png') left top no-repeat;
+  	background-size: 100%;
+  	p{
+  		font-family: Tahoma;
+  		font-size: 14px;
+  		line-height: 18px;
+  		color: #fff;
+  		margin-bottom: 6px;
+  		text-indent: 43px
+  	}
+  	p:first-child{
+			position: relative;
+			&:before{
+				content: '';
+				position: absolute;
+				top: 5px;
+				left: 0;
+				display: block;
+				width: 8px;
+				height: 8px;
+				background-color: #fff;
+			}
+  	}
+  	a{
+  		@include link(#060606, lighten(#060606, 30%));
+  	}
+  }
+  &_bottom{
+  	background-color: #1a2541;
+  	height: 34px;
+  	border-top: 2px solid #147bbd;
   }
 }
