--- a/sass/_form-action-new.scss
+++ b/sass/_form-action-new.scss
@@ -1,19 +1,21 @@
 .form-action-new{
-  padding: 15px 0;
+  padding: 24px 38px 15px 42px;
   &_title{
+    font-family: sanslight;
     text-transform: uppercase;
-    padding: 15px;
     color: #ffffff;
-    font-size: 26px;
+    font-size: 21px;
     position: relative;
+    padding-top: 14px;
+    margin-bottom: 28px;
     &:before{
       content: " ";
       display: block;
       position: absolute;
-      left: 15px;
-      top: 0px;
-      width: 44px;
-      height: 2px;
+      left: 0;
+      top: 0;
+      width: 42px;
+      height: 3px;
       background-color: #ffffff;
     }
     @include m1000{
@@ -30,25 +32,29 @@
     @include clearfix();
   }
   &_confirmation{
-    padding: 16px 0 0;
-    
+    padding: 16px 0 0; 
     p{
-      text-align: center;
       color: #ffffff!important;
       font-size: 17px!important;;
     }
   }
   &_inner{
-    padding: 0px 0px 12px 0px;
-    margin: 0 auto;
-    width: 230px;
+    margin-bottom: 19px;
+    -webkit-box-shadow: inset 1px 1px 0px 0px rgba(191,191,191,1), -1px -1px 0px 0px rgba(64,64,64,1);
+    -moz-box-shadow: inset 1px 1px 0px 0px rgba(191,191,191,1), -1px -1px 0px 0px rgba(64,64,64,1);
+    box-shadow: inset 1px 1px 0px 0px rgba(191,191,191,1), -1px -1px 0px 0px rgba(64,64,64,1);
+    &:first-child{
+      margin-bottom: 26px;
+    }
+    //margin: 0 auto;
+    //width: 230px;
     @include m1000{
-      width: 230px;
+      //width: 230px;
     }
     input{
       font-size: 16px;
-      width: 198px;
-      height: 46px;
+      width: 100%;
+      height: 34px;
       border: none;
       margin: 0px;
       padding: 0px 16px 0px 16px;
@@ -62,24 +68,22 @@
   }
   &_button{
     padding: 0px 0px 0px 0px;
-    width: 230px;
-    margin: 0 auto;
-    //margin: 0px 0px 0px 123px;
+    margin-bottom: 13px;
     position: relative;
     input{
       width: 100%;
-      height: 54px;
+      height: 46px;
       //border: 2px solid #ffffff;
       border: none;
-      background-color: #e74c3c;
+      background-color: #e93d3e;
       font-family: $bold;
       color: #ffffff;
       font-size: 20px;
       text-transform: uppercase;
       padding: 1px 0px 0px 0px;
+      @include def-transition(background-color, 0.2s);
       &:hover{
         cursor: pointer;
-        border: 2px solid #3498db;
         background-color: #3498db;
       }
       @include m1000{
@@ -91,7 +95,7 @@
       position: absolute;
       //top: 10px;
       //left: -6px;
-      bottom: 20px;
+      bottom: 16px;
       right: -23px;
       .throbber {
         background: transparent url('../image/loader-ajax-blue2.gif') no-repeat 0px 0px; /* tweak this according to your gif */
@@ -103,19 +107,48 @@
     }
   }
   &_descr{
-    font-family: $light;
+    font-family: SegoeUIRegular;
     color: #ffffff;
-    font-size: 14px;
-    padding: 10px 15px 0px 15px;
+    font-size: 12px;
     text-align: center;
-    line-height: 1.2;
+    line-height: 14px;
     p{
-      font-family: $light;
+      font-family: SegoeUIRegular;
       color: #ffffff;
-      font-size: 14px;
+      font-size: 12px;
       text-align: center;
-      line-height: 1.2;
+      line-height: 14px;
       margin: 0;
     }
+  }
+  ::-webkit-input-placeholder {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
+  }
+  :-moz-placeholder {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
+  }
+  ::-moz-placeholder {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
+  }
+  :-ms-input-placeholder {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
+  }
+  ::-ms-input-placeholder {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
+  }
+  :placeholder-shown {
+    font-family: sans;
+    color: #727272;
+    font-size: 12px;
   }
 }
