--- a/sass/_title.scss
+++ b/sass/_title.scss
@@ -62,10 +62,10 @@
   &__actions{
     //background: url('../image/title-actions-1920.jpg') 50% no-repeat;
     //background-size: cover;
+    padding: 20px 0 0;
     height: auto;
     background: none;
     min-height: 0;
-    padding: 0;
   }
   
   &_h1{
